--- a/classes/trac_ContactSearchController.cls
+++ b/classes/trac_ContactSearchController.cls
@@ -15,29 +15,24 @@ public without sharing class trac_ContactSearchController {
     @AuraEnabled
     public static List<Contact> getContacts(Contact contact, Boolean sfccSearch) {
         List<Contact> contacts = new List<Contact>();
-        System.debug('trac_ContactSearchController::getContacts(): search contact: ' + contact);
         if (contact == null) {
             return contacts;
         }
         if (contact.Order_Number__c == null && !sfccSearch) {
             contacts.addAll(getSalesforceContacts(contact));
         }
-        System.debug('trac_ContactSearchController::getContacts(): contacts A: ' + contacts);
-        System.debug('trac_ContactSearchController::getContacts(): contacts A size: ' + contacts.size());
 
         if (isSearch(contact)) {
 
             if (sfccSearch) {
-                System.debug('trac_ContactSearchController::getContacts(): SFCC OCAPI search');
                 // SFCC OCAPI search
                 String businessUnit = contact.Business_Unit__c;
                 String sfccToken = SCCCommerceCloudConnect.connectToCommerceCloud(businessUnit);
-                String searchResponseJSON = SCCCommerceCloudConnect.searchCustomerByEmailWithDetails(contact.Email, sfccToken);
+                List<String> searchFields = new List<String>{'email'};
+                String searchResponseJSON = SCCCommerceCloudConnect.searchCustomerWithDetails(searchFields, contact.Email, sfccToken);
                 List<Contact> sfccContacts = SCCCommerceCloudConnect.getContactsFromSearchResponse(searchResponseJSON);
-                System.debug('trac_ContactSearchController::getContacts(): sfccContacts: ' + sfccContacts);
                 contacts.addAll(sfccContacts);
             } else {
-                System.debug('trac_ContactSearchController::getContacts(): UCID search');
                 // UCID search
                 trac_WS_GetCustomerDetails.GetCustomerDetailsResponse response = trac_WS_CustomerUtils.searchContact(contact);
                 List<Contact> ucidContacts = new List<Contact>();
@@ -53,8 +48,6 @@ public without sharing class trac_ContactSearchController {
                 }
                 contacts.addAll(ucidContacts);
             }
-            System.debug('trac_ContactSearchController::getContacts(): contacts B: ' + contacts);
-            System.debug('trac_ContactSearchController::getContacts(): contacts B size: ' + contacts.size());
         }
 
         if (contact.Order_Number__c != null && contact.Business_Unit__c != null) {
@@ -67,14 +60,9 @@ public without sharing class trac_ContactSearchController {
             }
         }
 
-        System.debug('trac_ContactSearchController::getContacts(): contacts C: ' + contacts);
-        System.debug('trac_ContactSearchController::getContacts(): contacts C size: ' + contacts.size());
-
         contacts = filterContactsByUcidNumber(contacts);
         contacts = sortContacts(contacts);
 
-        System.debug('trac_ContactSearchController::getContacts(): contacts D: ' + contacts);
-        System.debug('trac_ContactSearchController::getContacts(): contacts D size: ' + contacts.size());
         return contacts;
     }
 
@@ -118,9 +106,6 @@ public without sharing class trac_ContactSearchController {
 
     @AuraEnabled
     public static String stampSFCCCustomerNoAndId(Id caseId, Contact cnt) {
-        System.debug('Inside aura method trac_ContactSearchController::stampSFCCCustomerNoAndId');
-        System.debug('caseId: ' + caseId);
-        System.debug('cnt: ' + cnt);
         String retval = null;
         Contact stampContact = new Contact();
         if (caseId != null) {
@@ -163,8 +148,6 @@ public without sharing class trac_ContactSearchController {
 
     @AuraEnabled
     public static Id linkContactWithCase(Id contactId, Id caseId) {
-        System.debug('trac_ContactSearchController::linkContactWithCase: contactId: ' + contactId);
-        System.debug('trac_ContactSearchController::linkContactWithCase: caseId: ' + caseId);
         Contact contact = new Contact(Id = contactId);
         Case cs = new Case(
                 Id = caseId,
@@ -173,10 +156,8 @@ public without sharing class trac_ContactSearchController {
 
         try {
             update cs;
-            System.debug('trac_ContactSearchController::linkContactWithCase: update successful: ' + cs);
             return cs.Id;
         } catch (Exception e) {
-            System.debug('trac_ContactSearchController::linkContactWithCase: update failed: ' + e.getMessage());
             throw new AuraHandledException(e.getMessage());
         }
     }
