US-0000103: Lookup Loyalty Account By Loyalty Number

--- a/classes/trac_LoyaltySearchController.cls
+++ b/classes/trac_LoyaltySearchController.cls
@@ -1,17 +1,18 @@
 public with sharing class trac_LoyaltySearchController {
-
+    
     @AuraEnabled
-    public static TLAuraResponse getLoyalty(String email, String loyaltyId, String phoneNum) {
+    public static TLAuraResponse getLoyaltyMerkle(String loyaltyId, String email) {
         TLAuraResponse response = new TLAuraResponse(true);
         trac_WS_GetLoyalty request = new trac_WS_GetLoyalty();
-
-        request.loyaltyRequest = new trac_WS_GetLoyalty.LoyaltyRequest(
-                email,
-                loyaltyId,
-                phoneNum,
-                '4');
+        
+        if(loyaltyId != null)
+        	request.loyaltyId = loyaltyId;
+        
+        if(email != null)
+        	request.email = email;
+        
         try {
-            if(request.send() && request.loyaltyRequest != null) {
+            if(request.send()) {
                 response.returnValuesMap.put('loyalty', request.loyaltyResponse);
             } else if (!request.send() && request.isNotFound()) {
                 response = new TLAuraResponse(false, 'loyalty not found');
@@ -22,7 +23,6 @@ public with sharing class trac_LoyaltySearchController {
             Integration_Error__c integrationError = trac_IntegrationError.addError(new Integration_Error__c(
                     Description__c = e.getMessage() + '\n' + e.getStackTraceString(),
                     Endpoint__c = request.ENDPOINT,
-                    Request__c = JSON.serializePretty(request.loyaltyRequest),
                     Service__c = 'Loyalty Lookup'
             ));
             insert integrationError;
@@ -33,18 +33,6 @@ public with sharing class trac_LoyaltySearchController {
         }
 
         response.returnValuesMap.put('statusCode', request.getStatusCode());
-
-        return response;
-    }
-
-    @AuraEnabled
-    public static TLAuraResponse testAPI() {
-        TLAuraResponse response = new TLAuraResponse(true);
-        trac_WS_GetLoyaltyById request = new trac_WS_GetLoyaltyById();
-
-        if(request.send()) {
-            response.returnValuesMap.put('loyalty', request.loyaltyResponse);
-        }
 
         return response;
     }
