--- a/classes/trac_LoyaltySearchControllerTest.cls
+++ b/classes/trac_LoyaltySearchControllerTest.cls
@@ -1,14 +1,13 @@
 @IsTest
 public with sharing class trac_LoyaltySearchControllerTest {
     static final TLTestFactory factory = new TLTestFactory();
-
+    
     @IsTest
-    static void testGetLoyalty() {
+    static void testGetLoyaltyMerkle() {
         Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty());
-        String email = 'MANIRKRISH@OPTONLINE.NET';
+        String email = 'wassim1002@hbc.com';
         String loyaltyId = null;
-        String phoneNum = null;
-        trac_WS_GetLoyalty.LoyaltyResponse res = (trac_WS_GetLoyalty.LoyaltyResponse) trac_LoyaltySearchController.getLoyalty(email, loyaltyId, phoneNum).returnValuesMap.get('loyalty');
+        trac_WS_GetLoyalty.LoyaltyResponse res = (trac_WS_GetLoyalty.LoyaltyResponse) trac_LoyaltySearchController.getLoyaltyMerkle(email, loyaltyId).returnValuesMap.get('loyalty');
         System.assert(res != null, 'Loyalty not retrived successfully.');
     }
 }
