US-0000100: Issue a Basic Appeasement

--- a/classes/trac_IssueAppeasementControllerTest.cls
+++ b/classes/trac_IssueAppeasementControllerTest.cls
@@ -5,6 +5,9 @@
 @IsTest
 private class trac_IssueAppeasementControllerTest {
 
+    private static final String loyaltyNumber = '1000000';
+    private static final String email = 'tester1@testtest.com';
+
     @TestSetup
     static void setup() {
         trac_TestUtils.setupWebServiceSettings();
@@ -16,8 +19,8 @@ private class trac_IssueAppeasementControllerTest {
                         FirstName = 'Testy',
                         LastName = 'Tester',
                         Business_Unit__c = 'Hudson\'s Bay',
-                        Loyalty_Number__c = '1000000',
-                        Email = 'tester1@testtest.com',
+                        Loyalty_Number__c = loyaltyNumber,
+                        Email = email,
                         Available_Points__c = '145'
                 ),
                 true
@@ -30,7 +33,7 @@ private class trac_IssueAppeasementControllerTest {
 
         Test.setMock(HttpCalloutMock.class, new trac_WS_RecordLoyaltyEventTest.RecordEventMock());
         Test.startTest();
-        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(cnts[0].Id, 10, 0);
+        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(loyaltyNumber, email, 10, 0);
         Test.stopTest();
 
         System.assertEquals(true, resp.isSuccess);
@@ -42,7 +45,7 @@ private class trac_IssueAppeasementControllerTest {
 
         Test.setMock(HttpCalloutMock.class, new trac_WS_RecordLoyaltyEventTest.RecordEventMock('fail'));
         Test.startTest();
-        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(cnts[0].Id, 10, 0);
+        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(loyaltyNumber, email, 10, 0);
         Test.stopTest();
 
         System.assertEquals(false, resp.isSuccess);
@@ -54,7 +57,7 @@ private class trac_IssueAppeasementControllerTest {
 
         Test.setMock(HttpCalloutMock.class, new trac_WS_RecordLoyaltyEventTest.RecordEventMock('error'));
         Test.startTest();
-        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(cnts[0].Id, 10, 0);
+        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(loyaltyNumber, email, 10, 0);
         Test.stopTest();
 
         System.assertEquals(false, resp.isSuccess);
@@ -69,20 +72,16 @@ private class trac_IssueAppeasementControllerTest {
         Test.setMock(HttpCalloutMock.class, new trac_WS_RecordLoyaltyEventTest.RecordEventMock());
         Test.startTest();
 
-        // null contactId
-        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(null, 10, 0);
+        // null loyaltyNumber
+        TLAuraResponse resp = trac_IssueAppeasementController.submitAppeasement(null, null, 10, 0);
+        System.assertEquals(false, resp.isSuccess);
+
+        // null email
+        resp = trac_IssueAppeasementController.submitAppeasement(loyaltyNumber, null, 10, 0);
         System.assertEquals(false, resp.isSuccess);
 
         // zero points
-        resp = trac_IssueAppeasementController.submitAppeasement(cnts[0].Id, 0, 0);
-        System.assertEquals(false, resp.isSuccess);
-
-        // contact missing Loyalty_Number__c
-        resp = trac_IssueAppeasementController.submitAppeasement(cnts[0].Id, 10, 0);
-        System.assertEquals(false, resp.isSuccess);
-
-        // non-existant contact
-        resp = trac_IssueAppeasementController.submitAppeasement('003000000000000AAA', 10, 0);
+        resp = trac_IssueAppeasementController.submitAppeasement(loyaltyNumber, email, 0, 0);
         System.assertEquals(false, resp.isSuccess);
 
         Test.stopTest();
