US-0000101: Delete Loyalty Account

--- a/classes/trac_LoyaltyControllerTest.cls
+++ b/classes/trac_LoyaltyControllerTest.cls
@@ -19,4 +19,13 @@ public with sharing class trac_LoyaltyControllerTest {
         System.assert(res.success == false, 'failed to pause loyalty successfully.');
         System.assert(res.data.code == 201, 'failed to pause loyalty successfully.');
     }
+
+    @IsTest
+    static void testPauseLoyaltyFailRequest() {
+        Test.setMock(HttpCalloutMock.class, null);
+        String email = 'wassim1002@hbc.com';
+        String loyaltyId = '1200657659';
+        trac_WS_PauseLoyalty.PauseResponse res = (trac_WS_PauseLoyalty.PauseResponse) trac_LoyaltyController.pauseLoyalty(email, loyaltyId).returnValuesMap.get('response');
+        System.assert(res == null, 'failed to send request.');
+    }
 }
