--- a/classes/trac_LoyaltyController.cls
+++ b/classes/trac_LoyaltyController.cls
@@ -1,9 +1,51 @@
 public with sharing class trac_LoyaltyController {
-/*    @AuraEnabled
-    public static TLAuraResponse updateLoyalty() {
 
-        return null;
-    }*/
+    @AuraEnabled
+    public static TLAuraResponse updateLoyaltyPoints(String loyaltyId, String email, Integer points, String eventType) {
+        TLAuraResponse response = new TLAuraResponse(true);
+
+        if (String.isBlank(loyaltyId)) {
+            response.isSuccess = false;
+            response.message = 'Loyalty number missing';
+        } else if (String.isBlank(email)) {
+            response.isSuccess = false;
+            response.message = 'Email missing';
+        } else if (eventType == null) {
+            response.isSuccess = false;
+            response.message = 'Event type is missing';
+        }
+
+        try {
+            if (response.isSuccess) {
+                // no errors so far; callout to endpoint
+                trac_WS_RecordLoyaltyEvent evt = new trac_WS_RecordLoyaltyEvent();
+                evt.loyaltyId = loyaltyId;
+                evt.email = email;
+                evt.eventType = eventType;
+                evt.value = points;
+
+                if (evt.send()) {
+                    // successful callout
+                    response.message = 'Successfully updated points to ' + points + ' to Loyalty Number ' + loyaltyId;
+                    response.returnValuesMap.put('response', evt.eventResponse);
+                } else {
+                    // unsuccessful callout
+                    response.isSuccess = false;
+                    if (evt.eventResponse != null) {
+                        response.message  = evt.eventResponse.data.message;
+                    } else {
+                        response.message = evt.jsonError;
+                        System.debug('JSON error response: ' + evt.jsonError);
+                    }
+                    response.returnValuesMap.put('response', evt.eventResponse);
+                }
+            }
+        } catch (Exception e) {
+            throw new AuraHandledException(e.getMessage());
+        }
+
+        return response;
+    }
 
     @AuraEnabled
     public static TLAuraResponse pauseLoyalty(String loyaltyId, String email) {
