--- a/classes/trac_LoyaltySearchControllerTest.cls
+++ b/classes/trac_LoyaltySearchControllerTest.cls
@@ -7,8 +7,12 @@ public with sharing class trac_LoyaltySearchControllerTest {
         Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty());
         String email = 'wassim1002@hbc.com';
         String loyaltyId = null;
+
+
         String recordId = null;
         trac_WS_GetLoyalty.LoyaltyResponse res = (trac_WS_GetLoyalty.LoyaltyResponse) trac_LoyaltySearchController.getLoyalty(email, loyaltyId, recordId).returnValuesMap.get('body');
+
+
         System.assert(res != null, 'Loyalty retrived successfully.');
     }
     
@@ -17,8 +21,12 @@ public with sharing class trac_LoyaltySearchControllerTest {
         Test.setMock(HttpCalloutMock.class, null);
         String email = 'wassim1002@hbc.com';
         String loyaltyId = null;
+
+
         String recordId = '50005000000b8IzAAI';
         String res = (String) trac_LoyaltySearchController.getLoyalty(email, loyaltyId, recordId).returnValuesMap.get('body');
+
+
         System.assert(res == '', 'Loyalty not retrived successfully.');
     }
 
@@ -27,9 +35,19 @@ public with sharing class trac_LoyaltySearchControllerTest {
         Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty('customer/show.exception'));
         String email = 'wassim1002@hbc.com';
         String loyaltyId = null;
+
+
+
         String recordId = '50005000000b8IzAAI';
-        String res = (String) trac_LoyaltySearchController.getLoyalty(email, loyaltyId, recordId).message;
-        System.assert(res != null, 'exception thrown.');
+        try{
+            String res = (String) trac_LoyaltySearchController.getLoyalty(email, loyaltyId, recordId).message;
+
+        } catch (Exception e) {
+            System.assert(e.getMessage() != null, 'exception thrown.');
+        }
+
+
+
     }
 
     @IsTest
@@ -58,7 +76,16 @@ public with sharing class trac_LoyaltySearchControllerTest {
         String email = null;
         String loyaltyId = '600294999992297';
         String phoneNum = null;
-        String res = (String) trac_LoyaltySearchController.getLoyaltyUAD(loyaltyId, email, phoneNum).message;
-        System.assert(res != null, 'exception thrown.');
+
+
+        try {
+            String res = (String) trac_LoyaltySearchController.getLoyaltyUAD(loyaltyId, email, phoneNum).message;
+
+        } catch (Exception e) {
+            System.assert(e.getMessage() != null, 'exception thrown.');
+
+        }
+
+
     }
 }
