--- a/classes/trac_CloseLoyaltyAccountControllerTest.cls
+++ b/classes/trac_CloseLoyaltyAccountControllerTest.cls
@@ -35,6 +35,43 @@ public with sharing class trac_CloseLoyaltyAccountControllerTest {
     }
 
     @IsTest
+    static void testUpdateLoyaltyPointsFailRequestEmail() {
+        Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty(null));
+        String email = null;
+        String loyaltyId = '124234567';
+        Integer points = -100;
+        String eventType = null;
+        trac_WS_RecordLoyaltyEvent.RecordLoyaltyEventResponse res = (trac_WS_RecordLoyaltyEvent.RecordLoyaltyEventResponse) trac_CloseLoyaltyAccountController.updateLoyaltyPoints(loyaltyId, email, points, eventType).returnValuesMap.get('body');
+        System.assert(res == null, 'could not update loyalty points successfully.');
+    }
+
+    @IsTest
+    static void testUpdateLoyaltyPointsFailRequestEvent() {
+        Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty(null));
+        String email = 'someemail@hbc.com';
+        String loyaltyId = '124234567';
+        Integer points = -100;
+        String eventType = null;
+        trac_WS_RecordLoyaltyEvent.RecordLoyaltyEventResponse res = (trac_WS_RecordLoyaltyEvent.RecordLoyaltyEventResponse) trac_CloseLoyaltyAccountController.updateLoyaltyPoints(loyaltyId, email, points, eventType).returnValuesMap.get('body');
+        System.assert(res == null, 'could not update loyalty points successfully.');
+    }
+
+    @IsTest
+    static void testUpdateLoyaltyPointsException() {
+        Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty('customer/show.exception'));
+        String email = 'wassim1002@hbc.com';
+        String loyaltyId = '1200657659';
+        Integer points = -100;
+        String eventType = 'close_member';
+        try{
+            trac_WS_RecordLoyaltyEvent.RecordLoyaltyEventResponse res = (trac_WS_RecordLoyaltyEvent.RecordLoyaltyEventResponse) trac_CloseLoyaltyAccountController.updateLoyaltyPoints(loyaltyId, email, points, eventType).returnValuesMap.get('body');
+
+        } catch (Exception e) {
+            System.assert(e.getMessage() != null, 'exception thrown.');
+        }
+    }
+
+    @IsTest
     static void testPauseLoyalty() {
         Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty('pause'));
         String email = 'wassim1002@hbc.com';
@@ -63,5 +100,20 @@ public with sharing class trac_CloseLoyaltyAccountControllerTest {
         String close_member = '1';
         String res = (String) trac_CloseLoyaltyAccountController.pauseLoyalty(loyaltyId, email, close_member).returnValuesMap.get('body');
         System.assert(res == '', 'failed to send request.');
+    }
+
+    @IsTest
+    static void testPauseLoyaltyException() {
+        Test.setMock(HttpCalloutMock.class, new MockHttpResponseLoyalty('customer/show.exception'));
+        String email = 'wassim1002@hbc.com';
+        String loyaltyId = '1200657659';
+        String close_member = '1';
+
+        try{
+            String res = (String) trac_CloseLoyaltyAccountController.pauseLoyalty(loyaltyId, email, close_member).returnValuesMap.get('body');
+
+        } catch (Exception e) {
+            System.assert(e.getMessage() != null, 'exception thrown.');
+        }
     }
 }
